--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -22,6 +22,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      padding: 3rem 0;
       @media screen and (max-width: 768px) {
         flex-direction: column;
       }
